add xml files